# test_task_11

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __main__.py  captcha_solve.py  config.py
